[tool.poetry]
name = "dprofiler"
version = "0.1.0"
description = "profile tabular datasets, manage automatic validation for new datasets, automatic handling for quality issues."
authors = ["Ezzaldin97 <kingtal632@yahoo.com>"]
repository = "https://github.com/Ezzaldin97/dprofiler"
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = {version = "^0.19.0", extras = ["all"]}
pyyaml = "^6.0.1"
pydantic = "^2.2.0"
pathlib = "^1.0"
ruamel-yaml = "^0.17.32"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
